--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dependencies": {
         "@mantine/core": "^8.3.9",
         "@mantine/hooks": "^8.3.9",
+        "@react-three/drei": "^10.7.7",
+        "@react-three/fiber": "^9.4.0",
         "@tabler/icons": "^3.35.0",
         "@tabler/icons-react": "^3.35.0",
         "@tanstack/react-query": "^5.90.11",
@@ -22,6 +24,7 @@
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "superjson": "^2.2.6",
+        "three": "^0.181.2",
         "zod": "^4.1.13"
     },
     "devDependencies": {
