--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.7",
         "@types/react-dom": "^19.2.3",
+        "@types/three": "^0.181.0",
         "typescript": "^5.9.3"
     }
 }
