--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@mantine/hooks": "^8.3.9",
         "@react-three/drei": "^10.7.7",
         "@react-three/fiber": "^9.4.0",
+        "@react-three/postprocessing": "^3.0.4",
         "@tabler/icons": "^3.35.0",
         "@tabler/icons-react": "^3.35.0",
         "@tanstack/react-query": "^5.90.11",
