--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@trpc/server": "^11.7.2",
         "mongoose": "^9.0.0",
         "next": "^16.0.5",
+        "postprocessing": "^6.38.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "superjson": "^2.2.6",
