--- a/.drone.yml
+++ b/.drone.yml
@@ -31,8 +31,8 @@ steps:
         path: /var/run/docker.sock
       - name: env-configs
         path: /configs
-    depends_on:
-      - lint
+    # depends_on:
+    #   - lint
     when:
       branch:
         - master
