--- a/env.example
+++ b/env.example
@@ -1,6 +1,5 @@
-# MongoDB Atlas
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/shorthack?retryWrites=true&w=majority
+# MongoDB (локальная)
+MONGODB_URI=mongodb://localhost:27017/shorthack
 
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-NODE_ENV=production
